--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <text x="300" y="148" text-anchor="middle">grade</text>
   </g>
 </svg>
-<div class="figcap"><i>Figure 1.19:</i> Specimen classification</div>
+<div class="figcap"><i>Specimen classification</i></div>
 
     </div>
 
@@ -474,7 +474,7 @@
 
 
     <div class="card">
-      <h2>Column face contour plots</h2>
+      <h2>Contour plots</h2>
       <div class="contours">
         <div class="contourItem">
           <div class="contourHead">
